posting a facture fully works
